--- a/Foodgram/app/src/main/res/layout/activity_login.xml
+++ b/Foodgram/app/src/main/res/layout/activity_login.xml
@@ -48,6 +48,7 @@
                 android:id="@+id/emaillog"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="textLongMessage"
                 android:hint="Email"
                 android:fontFamily="@font/poppins" />
         </com.google.android.material.textfield.TextInputLayout>
