--- a/Foodgram/app/src/main/res/layout/activity_register.xml
+++ b/Foodgram/app/src/main/res/layout/activity_register.xml
@@ -54,6 +54,7 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/emailreg"
+                android:inputType="textLongMessage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins"
