--- a/Foodgram/app/src/main/res/xml/activity_post_detail_scene.xml
+++ b/Foodgram/app/src/main/res/xml/activity_post_detail_scene.xml
@@ -15,55 +15,45 @@
 
     <ConstraintSet android:id="@+id/start">
         <Constraint
-            android:id="@+id/close"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_marginBottom="5dp"
-            motion:layout_constraintBottom_toTopOf="@+id/scrollView2"
-            android:layout_marginEnd="15dp"
-            motion:layout_constraintRight_toRightOf="@id/scrollView2"
-            android:alpha="0" />
-        <Constraint
-            android:id="@+id/arrow"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_marginBottom="5dp"
-            motion:layout_constraintBottom_toTopOf="@+id/scrollView2"
-            android:layout_marginEnd="15dp"
-            motion:layout_constraintRight_toRightOf="@id/scrollView2"
-            android:alpha="1" />
-        <Constraint
             android:id="@+id/jenis"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             motion:layout_constraintBottom_toTopOf="@+id/layout"
             android:alpha="0" />
+        <Constraint
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            motion:layout_constraintTop_toTopOf="@+id/image"
+            android:layout_marginTop="16dp"
+            android:id="@+id/back"
+            motion:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp" />
+        <Constraint
+            android:id="@+id/close"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginBottom="55dp"
+            motion:layout_constraintBottom_toTopOf="@+id/scrollView2"
+            android:layout_marginEnd="40dp"
+            motion:layout_constraintRight_toRightOf="@id/scrollView2"
+            android:alpha="0" />
+        <Constraint
+            android:id="@+id/arrow"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginBottom="55dp"
+            motion:layout_constraintBottom_toTopOf="@+id/scrollView2"
+            android:layout_marginEnd="40dp"
+            motion:layout_constraintRight_toRightOf="@id/scrollView2"
+            android:alpha="1" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
         <Constraint
-            android:id="@+id/close"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_marginBottom="5dp"
-            motion:layout_constraintBottom_toTopOf="@+id/scrollView2"
-            android:layout_marginEnd="15dp"
-            motion:layout_constraintRight_toRightOf="@id/scrollView2"
-            android:alpha="1" />
-        <Constraint
-            android:id="@+id/arrow"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_marginBottom="5dp"
-            motion:layout_constraintBottom_toTopOf="@+id/scrollView2"
-            android:layout_marginEnd="15dp"
-            motion:layout_constraintRight_toRightOf="@id/scrollView2"
-            android:alpha="0" />
-        <Constraint
             android:layout_height="wrap_content"
             motion:layout_editor_absoluteX="0dp"
             motion:layout_constraintBottom_toBottomOf="@id/image"
-            android:layout_marginBottom="280dp"
+            android:layout_marginBottom="240dp"
             android:layout_width="match_parent"
             android:id="@+id/layout" />
         <Constraint
@@ -71,5 +61,31 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:alpha="0.1" />
+        <Constraint
+            android:id="@+id/back"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            motion:layout_constraintTop_toTopOf="@+id/image"
+            android:layout_marginTop="16dp"
+            motion:layout_editor_absoluteX="16dp"
+            android:alpha="0" />
+        <Constraint
+            android:id="@+id/close"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginBottom="55dp"
+            motion:layout_constraintBottom_toTopOf="@+id/scrollView2"
+            android:layout_marginEnd="40dp"
+            motion:layout_constraintRight_toRightOf="@id/scrollView2"
+            android:alpha="1" />
+        <Constraint
+            android:id="@+id/arrow"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginBottom="55dp"
+            motion:layout_constraintBottom_toTopOf="@+id/scrollView2"
+            android:layout_marginEnd="40dp"
+            motion:layout_constraintRight_toRightOf="@id/scrollView2"
+            android:alpha="0" />
     </ConstraintSet>
 </MotionScene>
