--- a/Foodgram/app/src/main/res/layout/activity_post_detail.xml
+++ b/Foodgram/app/src/main/res/layout/activity_post_detail.xml
@@ -6,12 +6,12 @@
     android:layout_height="match_parent"
     android:background="@color/darkgreen"
     app:layoutDescription="@xml/activity_post_detail_scene"
-    tools:context=".PostDetail">
+    tools:context=".PostDetailActivity">
 
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"/>
 
     <ImageView
         android:id="@+id/back"
@@ -36,6 +36,31 @@
         android:src="@drawable/bookmark"
         app:layout_constraintTop_toTopOf="@id/image"
         app:layout_editor_absoluteY="10dp"/>
+    <ImageView
+        android:id="@+id/like"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintRight_toLeftOf="@id/bookmark"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/circle_bg"
+        android:padding="8dp"
+        android:src="@drawable/heart"
+        app:layout_constraintTop_toTopOf="@id/image"
+        app:layout_editor_absoluteY="10dp"/>
+
+    <ImageView
+        android:id="@+id/comment"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintRight_toLeftOf="@id/like"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/circle_bg"
+        android:padding="8dp"
+        android:src="@drawable/comment"
+        app:layout_constraintTop_toTopOf="@id/image"
+        app:layout_editor_absoluteY="10dp"/>
 
     <TextView
         android:id="@+id/jenis"
@@ -55,38 +80,77 @@
         android:layout_height="wrap_content"
         android:background="@drawable/top_rounded"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="@id/image"
-        tools:layout_editor_absoluteX="16dp">
+        app:layout_constraintTop_toBottomOf="@id/image">
 
         <TextView
             android:id="@+id/judul"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins"
-            android:paddingTop="10dp"
             android:paddingStart="20dp"
+            android:paddingTop="10dp"
             android:text="Gurame Asam Manis"
             android:textColor="@color/black"
             android:textSize="30dp" />
 
-        <LinearLayout
-            android:id="@+id/layoutjudul"
-            android:layout_below="@+id/judul"
+        <RelativeLayout
+            android:id="@+id/layoutPublisher"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@id/judul"
+            android:layout_marginLeft="20dp"
+            android:orientation="horizontal"
+            android:layout_marginBottom="10dp">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/image_profile"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_centerVertical="true"
+                android:src="@color/black" />
+
+            <TextView
+                android:id="@+id/nama"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_marginLeft="5dp"
+                android:layout_toRightOf="@id/image_profile"
+                android:text="Name"
+                android:textSize="15dp" />
+
+            <ImageView
+                android:id="@+id/settingPost"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerInParent="true"
+                android:src="@drawable/verticalthreedots"
+                android:layout_marginEnd="10dp"/>
+
+
+        </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/layoutjudul"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/layoutPublisher"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/likes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="15dp"
+                android:paddingLeft="20dp"
                 android:text="10000 likes" />
+
             <TextView
                 android:id="@+id/comments"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="15dp"
-                android:text="1000 comments"/>
+                android:text="1000 comments" />
         </LinearLayout>
     </RelativeLayout>
 
@@ -102,30 +166,6 @@
         android:backgroundTint="@color/white"
         app:layout_constraintTop_toTopOf="@+id/layout"/>
 
-<!--    <ImageView-->
-<!--        android:id="@+id/close"-->
-<!--        android:layout_width="45dp"-->
-<!--        android:layout_height="45dp"-->
-<!--        android:layout_marginEnd="40dp"-->
-<!--        android:layout_marginBottom="55dp"-->
-<!--        android:src="@drawable/close3"-->
-<!--        android:padding="5dp"-->
-<!--        android:background="@drawable/circle_bg"-->
-<!--        app:layout_constraintBottom_toTopOf="@+id/scrollView2"-->
-<!--        app:layout_constraintRight_toRightOf="@id/scrollView2" />-->
-
-<!--    <ImageView-->
-<!--        android:id="@+id/arrow"-->
-<!--        android:layout_width="45dp"-->
-<!--        android:layout_height="45dp"-->
-<!--        android:layout_marginEnd="40dp"-->
-<!--        android:layout_marginBottom="55dp"-->
-<!--        android:background="@drawable/circle_bg"-->
-<!--        android:padding="10dp"-->
-<!--        android:src="@drawable/arrowslide"-->
-<!--        app:layout_constraintBottom_toTopOf="@+id/scrollView2"-->
-<!--        app:layout_constraintRight_toRightOf="@id/scrollView2" />-->
-
 
     <ScrollView
         android:id="@+id/scrollView2"
@@ -138,7 +178,7 @@
             android:layout_height="wrap_content"
             android:background="@color/pastel"
             android:orientation="vertical"
-            android:padding="15dp">
+            android:padding="20dp">
 
             <TextView
                 android:layout_width="match_parent"
@@ -198,21 +238,6 @@
                 android:id="@+id/relativ2"
                 android:layout_width="match_parent"
                 android:layout_height="100dp">
-
-                <ImageView
-                    android:id="@+id/like"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_toRightOf="@+id/comment"
-                    android:paddingLeft="10dp"
-                    android:src="@drawable/heart" />
-
-                <ImageView
-                    android:id="@+id/comment"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:paddingLeft="10dp"
-                    android:src="@drawable/comment" />
 
             </RelativeLayout>
 
