--- a/Foodgram/app/src/main/res/layout/fragment_profile.xml
+++ b/Foodgram/app/src/main/res/layout/fragment_profile.xml
@@ -35,16 +35,15 @@
                     android:textSize="30sp"
                     android:textStyle="bold" />
 
-                <Button
-                    android:id="@+id/logout"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <ImageView
+                    android:id="@+id/settingAcc"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
                     android:layout_alignParentRight="true"
                     android:layout_centerInParent="true"
-                    android:layout_marginEnd="100dp"
-                    android:backgroundTint="@color/pastel"
-                    android:text="LOGOUT"
-                    android:textColor="@color/black" />
+                    android:layout_marginEnd="10dp"
+                    android:background="@drawable/ic_option"
+                    android:backgroundTint="@color/white" />
 
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
@@ -54,22 +53,18 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/bar"
-        android:layout_marginTop="13dp">
+        android:layout_below="@id/bar">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingStart="20dp"
-            android:paddingEnd="20dp">
+            android:orientation="vertical">
 
             <LinearLayout
                 android:id="@+id/top_bar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center
-"
+                android:layout_gravity="center"
                 android:orientation="horizontal"
                 android:padding="16dp">
 
@@ -101,8 +96,8 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="7dp"
                     android:layout_marginBottom="7dp"
-                    android:maxLines="3"
                     android:fontFamily="@font/poppins"
+                    android:maxLines="3"
                     android:textColor="@color/darkgreen" />
 
                 <LinearLayout
@@ -121,14 +116,14 @@
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginEnd="25dp"
+                            android:layout_marginEnd="12.5dp"
                             android:orientation="vertical">
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/poppins"
-                                android:text="Posts"
+                                android:text="Postingan"
                                 android:textColor="@color/darkgreen"
                                 android:textSize="18sp" />
 
@@ -145,16 +140,23 @@
 
                         </LinearLayout>
 
+                        <View
+                            android:layout_width="1dp"
+                            android:layout_height="50dp"
+                            android:layout_marginEnd="12.5dp"
+                            android:background="@color/grey" />
+
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginEnd="12.5dp"
                             android:orientation="vertical">
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/poppins"
-                                android:text="Followers"
+                                android:text="Pengikut"
                                 android:textColor="@color/darkgreen"
                                 android:textSize="18sp" />
 
@@ -171,17 +173,22 @@
 
                         </LinearLayout>
 
+                        <View
+                            android:layout_width="1dp"
+                            android:layout_height="50dp"
+                            android:layout_marginEnd="12.5dp"
+                            android:background="@color/grey" />
+
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="25dp"
                             android:orientation="vertical">
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/poppins"
-                                android:text="Following"
+                                android:text="Mengikuti"
                                 android:textColor="@color/darkgreen"
                                 android:textSize="18sp" />
 
@@ -201,6 +208,8 @@
                     </LinearLayout>
 
                     <Button
+                        android:layout_marginStart="20dp"
+                        android:layout_marginEnd="20dp"
                         android:id="@+id/edit_profile"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -211,12 +220,16 @@
                 </LinearLayout>
             </LinearLayout>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_marginTop="10dp"
+                android:background="@color/grey" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp" />
+                android:layout_height="wrap_content" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view_save"
