--- a/Foodgram/app/src/main/res/layout/post_item.xml
+++ b/Foodgram/app/src/main/res/layout/post_item.xml
@@ -68,6 +68,14 @@
                 android:layout_toEndOf="@+id/likepost"
                 android:src="@drawable/comment" />
 
+            <ImageView
+                android:id="@+id/bookmarkpost"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginEnd="5dp"
+                android:layout_alignParentEnd="true"
+                android:src="@drawable/bookmark"/>
+
         </RelativeLayout>
 
         <TextView
